--- a/public/css/main.css
+++ b/public/css/main.css
@@ -15,7 +15,7 @@ a {
 }
 
 .page-header {
-  background-image: url("../img/head.png");
+  background-image: url("../img/head.jpg");
   width: 1000px;
   height: 400px;
   position: relative;
